# protly_dash_tools

./: Dockerfile  README.md  app.py  minutes_test.py  mp4_to_minutes.py  pyproject.toml  requirements.txt  start-docker.bat  test.py
functions/: utilities.py
pages/: index.py  minutes.py
