[tool.poetry]
name = "protly-dash-tools"
version = "0.1.0"
description = ""
authors = ["yydevelop <yasudadevelop@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dash = "^2.17.1"
dash-html-components = "^2.0.0"
dash-bootstrap-components = "^1.6.0"
moviepy = "^1.0.3"
whisper = "^1.1.10"
openai = "0.28"
pydub = "^0.25.1"
openai-whisper = {git = "https://github.com/openai/whisper.git"}
numpy = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
